--- a/app/src/main/res/layout/popup_add_reminder.xml
+++ b/app/src/main/res/layout/popup_add_reminder.xml
@@ -41,23 +41,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-        <EditText
-            android:id="@+id/edtReminderDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="52dp"
-            android:maxHeight="156dp"
-            android:background="@drawable/custom_background_edittext"
-            android:hint="@string/Description"
-            android:textColor="@color/black"
-            android:fontFamily="@font/lato_regular"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toBottomOf="@id/edtReminderTitle"/>
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/calenderSection"
             android:layout_width="match_parent"
@@ -67,7 +50,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toBottomOf="@id/edtReminderDescription">
+            app:layout_constraintTop_toBottomOf="@id/edtReminderTitle">
 
             <EditText
                 android:id="@+id/edtReminderDate"
