--- a/app/src/main/res/layout/popup_dailytasklist.xml
+++ b/app/src/main/res/layout/popup_dailytasklist.xml
@@ -87,11 +87,15 @@
             android:id="@+id/tvAddMoreTask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minHeight="28dp"
             android:text="@string/Add_more_tasks"
             android:textSize="16sp"
             android:textColor="@color/text_light"
             android:fontFamily="@font/lato_regular"
-            android:layout_marginTop="12dp"
+            android:gravity="center"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@id/viewDivider"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -101,11 +105,14 @@
             android:id="@+id/tvBtnCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minHeight="32dp"
+            android:minWidth="72dp"
             android:text="@string/Cancel"
             android:textSize="20sp"
             android:fontFamily="@font/lato_regular"
             android:textColor="@color/text_hint"
-            android:layout_marginTop="12dp"
+            android:gravity="center"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             app:layout_constraintEnd_toStartOf="@id/tvBtnDone"
@@ -117,13 +124,16 @@
             android:id="@+id/tvBtnDone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minHeight="32dp"
+            android:minWidth="72dp"
             android:text="@string/Done"
             android:textSize="20sp"
             android:fontFamily="@font/lato_regular"
             android:textColor="@color/text_light"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
+            android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/tvAddMoreTask"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
